MDEV-27201 Refactoring and cleanup

Extract function mark_column_if_needed() from find_field_in_table_ref().
Fix Windows build errors